fix styles missing scrollbar

--- a/src/assets/styles/style-panel.css
+++ b/src/assets/styles/style-panel.css
@@ -22,6 +22,13 @@ img {
 .form-group {
   width: 100%;
 }
+
+.panel-container{
+  overflow-y: auto;
+  max-height: 90vh;
+  padding: 0px 10px 0px 10px;
+}
+
 .panel-container::-webkit-scrollbar-track{
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   background-color: #f8f8f8;
